src/App.css
.game-heading {
  font-family: "Coffee-extra", "Courier New", Courier, monospace;
  font-weight: 500;
  font-size: 2.5rem;
}

.game-heading,
.game-rule {
  text-align: center;
  padding: 1rem;
}

.scoreboard-card {
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
  gap: 2rem;
}

.score {
  font-weight: 600;
}

.game-grid {
  display: grid;
  margin: 5rem;
  gap: 4rem;
  padding: 1rem;
  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
  grid-template-rows: 180px 180px;
}

.cat-card {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  cursor: pointer;
  box-shadow:
    0 0 0 4px black,
    8px 8px 0 0 black;
}

.cat-image {
  transition: all ease-in-out 650ms;
  width: 90%;
  height: 90%;
}

.cat-image:hover {
  width: 100%;
  height: 100%;
}

.gameover-dialog {

  font-size: 0.9rem;
  position: fixed;
  background-color: darkblue;
  color: white;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
  width: 35%;
  height: 15%;
  border: 2px solid black;
  padding: 1rem;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  box-shadow: 0 0 10px 500vw rgba(0, 0, 0, 0.6);
}

.new-game {
  padding: 0.5rem;
  background-color: #3d5786;
  color: white;
}



/* media queries */

@media (max-width: 600px) {

  .game-grid {
    display: grid;
    gap: 2rem;
    padding: 1rem;
    margin: 1rem;
    grid-template-columns: 150px 150px;
    grid-template-rows: 100px 100px 100px 100px 100px;
  }

  .game-rule {
    font-size: 0.7rem;
  }
  .gameover-dialog {
  font-size: 0.8em;
  position: fixed;
  background-color: darkblue;
  color: white;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
  width: 55%;
  height: 15%;
  border: 2px solid black;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  box-shadow: 0 0 10px 500vw rgba(0, 0, 0, 0.6);
}

.new-game {
  width: 50%;
  height: 40%;
  font-size: 0.5rem;
  background-color: #3d5786;
  color: white;
}
}

